deployment/local/k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: project-ingress
spec:
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: project-test
                port:
                  number: 3000
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: project-user
                port:
                  number: 3000
